<resources>
    <string name="app_name">Valve_application</string>
    <string name="disconnect">Disconnect</string>
    <string name="click_the_button_to_connect">Click the button to connect</string>
    <string name="connect">Connect</string>
    <string name="list_data">List data</string>
    <string name="view_logs">View logs</string>
    <string name="configure_the_watering">Configure the watering</string>
    <string name="configure_the_sensor_data">Configure the sensor data</string>
    <string name="change_language">Change language</string>
    <string name="a">A</string>
    <string name="humidity_of_ground">Humidity of ground:</string>
    <string name="temperature_of_air">Temperature of air:</string>
    <string name="humidity_of_air">Humidity of air:</string>
    <string name="enter_the_time_of_the_watering">Enter the time of the watering:</string>
    <string name="enter_the_length_of_the_watering">Enter the length of the watering:</string>
    <string name="set_max_humidity_of_ground_for_watering">Set max humidity of ground for watering:</string>
    <string name="set_max_humidity_of_air_for_watering">Set max humidity of air for watering:</string>
    <string name="set_max_temperature_of_air_for_watering">Set max temperature of air for watering:</string>
    <string name="view_watering_logs">View watering logs</string>
    <string name="view_warning_logs">View warning logs</string>
    <string name="view_error_logs">View error logs</string>
    <string name="turn_on_watering">Turn on watering</string>
    <string name="turn_off_watering">Turn off watering</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="list_sensor_data">List sensor data</string>
    <string name="active_time_of_watering">Active time of watering</string>
    <string name="add_watering_time">Add watering time</string>
    <string name="edit_watering_time">Edit watering time</string>
    <string name="delete">Delete</string>
    <string name="delete_configuration">Delete configuration</string>
    <string name="add_configuration">Add configuration</string>
    <string name="it_will_be_watered_for">It will be watered for:</string>
    <string name="monday">Monday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="tuesday">Tuesday</string>
    <string name="enter_first_watering_of_the_day">Enter first watering of the day</string>
    <string name="enter_the_time_of_the_first_watering">Enter the time of the first watering:</string>
    <string name="enter_hours">Enter hours</string>
    <string name="enter_the_time_of_the_second_watering">Enter the time of the second watering:</string>
    <string name="enter_the_time_of_the_third_watering">Enter the time of the third watering:</string>
    <string name="save">Save</string>
    <string name="time_in_minutes">Time in minutes</string>
    <string name="thursday">Thursday</string>
    <string name="saturday">Saturday</string>
    <string name="friday">Friday</string>
    <string name="sunday">Sunday</string>
    <string name="the_automation_is">The automation is:</string>
</resources>