<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/saveButton"
        android:layout_width="163dp"
        android:layout_height="54dp"
        android:layout_marginBottom="8dp"
        android:text="@string/save"
        app:layout_constraintBottom_toTopOf="@+id/returnButtonViewConfiguration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/returnButtonViewConfiguration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="Return"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/activeTimeText"
        android:layout_width="223dp"
        android:layout_height="32dp"
        android:gravity="center"
        android:text="@string/it_will_be_watered_for"
        app:layout_constraintBottom_toTopOf="@+id/activeTimeEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/activeTimeEdit"
        android:layout_width="305dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/time_in_minutes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/monday"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/monday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activeTimeEdit" />

    <CheckBox
        android:id="@+id/tuesday"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/tuesday"
        app:layout_constraintStart_toEndOf="@+id/monday"
        app:layout_constraintTop_toBottomOf="@+id/activeTimeEdit" />

    <CheckBox
        android:id="@+id/wednesday"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/Wednesday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activeTimeEdit" />

    <CheckBox
        android:id="@+id/thursday"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/thursday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monday" />

    <CheckBox
        android:id="@+id/friday"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/friday"
        app:layout_constraintStart_toEndOf="@+id/thursday"
        app:layout_constraintTop_toBottomOf="@+id/tuesday" />

    <CheckBox
        android:id="@+id/saturday"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/saturday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wednesday" />

    <CheckBox
        android:id="@+id/sunday"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="132dp"
        android:layout_marginRight="136dp"
        android:text="@string/sunday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friday" />

    <TextView
        android:id="@+id/firstWateringText"
        android:layout_width="133dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:text="@string/enter_the_time_of_the_first_watering"
        app:layout_constraintBottom_toTopOf="@+id/secondWateringText"
        app:layout_constraintEnd_toStartOf="@+id/firstWateringEdit"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/firstWateringEdit"
        android:layout_width="257dp"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="24dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/enter_hours"
        app:layout_constraintBottom_toTopOf="@+id/secondWateringEdit"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/secondWateringText"
        android:layout_width="133dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:text="@string/enter_the_time_of_the_second_watering"
        app:layout_constraintBottom_toTopOf="@+id/thirdWateringText"
        app:layout_constraintEnd_toStartOf="@+id/secondWateringEdit"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/secondWateringEdit"
        android:layout_width="253dp"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="28dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/enter_hours"
        app:layout_constraintBottom_toTopOf="@+id/thirdWateringEdit"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/thirdWateringText"
        android:layout_width="133dp"
        android:layout_height="48dp"
        android:text="@string/enter_the_time_of_the_third_watering"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toStartOf="@+id/thirdWateringEdit"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/thirdWateringEdit"
        android:layout_width="253dp"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/enter_hours"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>