<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SensorsActivities.ListDataActivity">

    <TextView
        android:id="@+id/humidityOfAir"
        android:layout_width="133dp"
        android:layout_height="49dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/humidityOfAirTextView" />

    <TextView
        android:id="@+id/soilHumidity"
        android:layout_width="133dp"
        android:layout_height="49dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/humidityOfGroundTextView" />

    <Button
        android:id="@+id/returnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Return"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96" />

    <TextView
        android:id="@+id/humidityOfGroundTextView"
        android:layout_width="227dp"
        android:layout_height="51dp"
        android:layout_marginBottom="168dp"
        android:gravity="center"
        android:text="@string/humidity_of_ground"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/temperatureOfAirTextView"
        android:layout_width="227dp"
        android:layout_height="51dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/temperature_of_air"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/humidityOfAirTextView"
        android:layout_width="227dp"
        android:layout_height="51dp"
        android:gravity="center"
        android:text="@string/humidity_of_air"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/humidityOfGroundTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperatureOfAirTextView"
        app:layout_constraintVertical_bias="0.513" />

    <TextView
        android:id="@+id/temperatureOfAir"
        android:layout_width="133dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperatureOfAirTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>