<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SensorsActivities.ListDataActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="400dp"
        android:layout_height="65dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maxHumidityOfGroundTextView"
        app:layout_constraintVertical_bias="0.153">

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/maxHumidityOfGroundTextView"
        android:layout_width="227dp"
        android:layout_height="51dp"
        android:layout_marginBottom="280dp"
        android:gravity="center"
        android:text="@string/set_max_humidity_of_ground_for_watering"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/maxHumidityOfAirTextView"
        android:layout_width="227dp"
        android:layout_height="51dp"
        android:gravity="center"
        android:text="@string/set_max_humidity_of_air_for_watering"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/maxHumidityOfGroundTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maxTemperatureOfAirTextView" />

    <TextView
        android:id="@+id/maxTemperatureOfAirTextView"
        android:layout_width="227dp"
        android:layout_height="51dp"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/set_max_temperature_of_air_for_watering"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/returnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Return"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="400dp"
        android:layout_height="65dp"
        app:layout_constraintBottom_toTopOf="@+id/maxHumidityOfGroundTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maxHumidityOfAirTextView">

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="400dp"
        android:layout_height="65dp"
        app:layout_constraintBottom_toTopOf="@+id/maxHumidityOfAirTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maxTemperatureOfAirTextView"
        app:layout_constraintVertical_bias="0.621">

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>